--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -231,7 +231,7 @@ input, textarea, select, button {
     }
 
     &:hover:before {
-      font-family: 'Font Awesome 5 Duotone';
+      font-weight: 400;
     }
   }
 }
