--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -227,7 +227,10 @@ input, textarea, select, button {
       content: '\f35a';
       font-family: 'Font Awesome 5 Pro';
       font-weight: 900;
-      margin-right: 1em;
+      margin-right: 0.5em;
+      display: inline-block;
+      vertical-align: middle;
+      line-height: 1em;
     }
 
     &:hover:before {
