--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -220,7 +220,7 @@ input, textarea, select, button {
     margin-left: 1em;
   }
 
-  ul li {
+  .field--name-body ul li {
     list-style-position: inside;
 
     &:before {
