--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -408,6 +408,7 @@ ul.breadcrumb li a:hover {
   font-weight: 700;
 }
 #page-title h1.page-title {
+  color: #0370bb;
   margin-top: 0;
   border-bottom: 0;
   margin-bottom: 0em;
@@ -1440,7 +1441,7 @@ ul.pager {
   border-radius: 6px;
   border: 1px solid #ccc;
   border-radius: 6px;
-  display: table;
+  display: inline-block;
   margin: auto;
   margin-top: 1em;
   padding: 0;
