--- a/sass/components/_pagers.scss
+++ b/sass/components/_pagers.scss
@@ -53,7 +53,7 @@ ul.pager {
   border-radius: 6px;
   border: 1px solid #ccc;
   border-radius: 6px;
-  display: table;
+  display: inline-block;
   margin: auto;
   margin-top: 1em;
   padding: 0;
