--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,4 +1,5 @@
-#block-superfish-1 {
+#block-superfish-1,
+#block-superfish-2 {
     display: flex;
 
     .block__content {
@@ -6,7 +7,8 @@
     }
 }
 
-#superfish-1 {
+#superfish-1,
+#superfish-2 {
     display: flex;
     align-content: center;
     justify-content: center;
@@ -182,7 +184,8 @@ ul.sf-vertical li ul li ul {
     margin-top: -4px;
 }
 
-#superfish-1-toggle {
+#superfish-1-toggle,
+#superfish-2-toggle {
     border: 0;
     display: block;
     text-align: center;
@@ -210,7 +213,8 @@ ul.sf-vertical li ul li ul {
     }
 }
 
-#superfish-1-accordion {
+#superfish-1-accordion,
+#superfish-2-accordion {
     border: 1px solid #689a04;
     border-top: 0px;
     border-radius: 0 0 10px 10px;
