Update Font Awesome font family usage

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -985,7 +985,7 @@ legend.collapse-processed a:visited {
   }
   #header.sticky-header:before {
     content: '\f0c9';
-    font-family: 'FontAwesome';
+    font-family: 'Font Awesome 5 Pro';
     font-size: 24px;
     left: -45px;
     background: #a7ce38;
