--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -300,7 +300,7 @@
 
         &:before {
             content: '\f0c9';
-            font-family: 'FontAwesome';
+            font-family: 'Font Awesome 5 Pro';
             font-size: 24px;
             left: -45px;
             background: #a7ce38;
