--- a/css/clients.css
+++ b/css/clients.css
@@ -16,12 +16,17 @@
 .node-type-client #content .radix-sutro .radix-layouts-column1 {
   order: 1;
   flex: 1;
+  max-width: 100%;
 }
 
 @media (min-width: 992px) {
   .node-type-client #content .radix-sutro .radix-layouts-column1 {
     order: 0;
   }
+}
+
+.node-type-client #content .radix-sutro .radix-layouts-column2 {
+  max-width: 100%;
 }
 
 .node-type-client .pane-node-field-client-logo {
