Fix indentations in lists on other places

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -103,6 +103,6 @@ div.vertical-tabs {
 
     ul.vertical-tabs-list {
         width: 15rem;
-        margin: -1px 0 -1px -15rem;
+        margin: -1px 0 -1px -15rem !important;
     }
 }
