--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -497,7 +497,7 @@ div.vertical-tabs {
 }
 div.vertical-tabs ul.vertical-tabs-list {
   width: 15rem;
-  margin: -1px 0 -1px -15rem;
+  margin: -1px 0 -1px -15rem !important;
 }
 
 #footer {
@@ -1116,7 +1116,7 @@ ul.sf-menu {
 a.menuparent:after {
   content: '\f0da';
   margin-left: 0.5em;
-  font-family: FontAwesome;
+  font-family: 'Font Awesome 5 Pro';
   line-height: 1;
 }
 
@@ -1267,7 +1267,7 @@ ul.sf-vertical li ul li ul {
 #superfish-1-accordion li.menuparent > a.menuparent:after,
 #superfish-2-accordion li.menuparent > a.menuparent:after {
   content: "\f0da";
-  font-family: "FontAwesome";
+  font-family: "Font Awesome 5 Pro";
 }
 #superfish-1-accordion li.menuparent.sf-expanded > a.menuparent,
 #superfish-2-accordion li.menuparent.sf-expanded > a.menuparent {
@@ -1276,7 +1276,7 @@ ul.sf-vertical li ul li ul {
 #superfish-1-accordion li.menuparent.sf-expanded > a.menuparent:after,
 #superfish-2-accordion li.menuparent.sf-expanded > a.menuparent:after {
   content: "\f0d7";
-  font-family: "FontAwesome";
+  font-family: "Font Awesome 5 Pro";
 }
 #superfish-1-accordion li.menuparent > ul,
 #superfish-2-accordion li.menuparent > ul {
