--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -207,7 +207,7 @@ input, textarea, select, button {
   flex: 1;
 }
 
-#content.page-content {
+.page-content {
   clear: both;
   margin: 0 0 1em 0;
 
