--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -225,6 +225,7 @@ input, textarea, select, button {
 
     &:before {
       content: '\f35a';
+      color: #0370bb;
       font-family: 'Font Awesome 5 Pro';
       font-weight: 900;
       margin-right: 0.5em;
