--- a/css/content_page_nodequeue_fields.css
+++ b/css/content_page_nodequeue_fields.css
@@ -1,27 +1,15 @@
 /* Fluid Typography */
 .view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
   margin-left: -0.5em;
   margin-right: -0.5em;
 }
 
 .view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-row {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 250px;
-          flex: 1 1 250px;
+  flex: 1 1 250px;
   margin: 0.5em;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-flow: column nowrap;
   display: flex;
 }
 
@@ -31,9 +19,7 @@
 }
 
 .view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-row .views-field-field-teaser-link-text {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   margin-bottom: 1em;
   text-align: center;
 }
@@ -46,5 +32,66 @@
 .view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-row .views-field-nodequeue-links ul.links {
   margin: 0;
   padding: 0;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-title-field {
+  text-align: center;
+  margin-top: 0;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-name,
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-published-at {
+  display: block;
+  text-align: center;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-name a,
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-published-at a {
+  color: black;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-name a:hover,
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-published-at a:hover {
+  color: blue;
+  text-decoration: underline;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-body {
+  flex-grow: 1;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-body .field-content {
+  margin-bottom: 1em;
+  line-height: 1.35em;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-body iframe {
+  width: 100%;
+  height: auto;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-field-categories {
+  font-weight: bold;
+  font-size: 0.8em;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-label-field-categories {
+  float: left;
+  margin-right: 4px;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-view-node a {
+  float: right;
+  text-transform: capitalize;
+  color: #EA4335;
+  font-weight: bold;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-view-node a:hover {
+  text-decoration: underline;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-view-node a:focus {
+  color: #0f753b;
 }
 /*# sourceMappingURL=content_page_nodequeue_fields.css.map */
