--- a/css/content_page_nodequeue_fields.css
+++ b/css/content_page_nodequeue_fields.css
@@ -36,6 +36,9 @@
 
 .view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-title-field {
   text-align: center;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-title-field h2 {
   margin-top: 0;
 }
 
@@ -43,6 +46,7 @@
 .view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-published-at {
   display: block;
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 .view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-name a,
@@ -70,9 +74,16 @@
   height: auto;
 }
 
+.view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-body img {
+  display: block;
+  height: auto;
+  margin: auto;
+  max-width: 100%;
+}
+
 .view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-field-field-categories {
   font-weight: bold;
-  font-size: 0.8em;
+  font-size: 0.8rem;
 }
 
 .view-home-page-nodequeue-view.view-display-id-panel_pane_1 .view-content .views-label-field-categories {
