--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -105,3 +105,7 @@ div.vertical-tabs {
         margin: -1px 0 -1px -15rem !important;
     }
 }
+
+.ui-widget-overlay {
+	background-repeat: repeat;
+}
