Fix form-actions positioning

--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -126,6 +126,7 @@ legend.collapse-processed a:visited {
 .form-actions {
   text-align: center;
   width: 100% !important;
+  left: 0;
 }
 
 /* @end forms*/
