--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -670,6 +670,7 @@ fieldset {
   border: 1px solid #9babb0;
   margin: 15px 0;
   padding: 10px;
+  box-sizing: border-box;
 }
 
 /* Typography and spacing for legend of fieldsets */
@@ -685,8 +686,25 @@ legend.collapse-processed a:visited {
   font-weight: bold;
 }
 
+#linkit-cancel {
+  cursor: pointer;
+  color: #555;
+  font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  margin: 0 4px;
+  padding: 2px 4px;
+  text-transform: uppercase;
+  border: 0;
+  border-radius: 4px;
+  border-color: #d8d8d8 #d1d1d1 #bababa;
+  border-style: solid;
+  border-width: 1px;
+}
+
 .form-actions {
   text-align: center;
+  width: 100% !important;
+  left: 0;
 }
 
 /* @end forms*/
