--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -106,6 +106,7 @@ fieldset {
   border: 1px solid #9babb0;
   margin: 15px 0;
   padding: 10px;
+  box-sizing: border-box;
 }
 
 /* Typography and spacing for legend of fieldsets */
@@ -121,6 +122,21 @@ legend.collapse-processed,
 legend.collapse-processed a:link,
 legend.collapse-processed a:visited {
   font-weight: bold;
+}
+
+#linkit-cancel {
+  cursor: pointer;
+  color: #555;
+  font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  margin: 0 4px;
+  padding: 2px 4px;
+  text-transform: uppercase;
+  border: 0;
+  border-radius: 4px;
+  border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
+  border-style: solid;
+  border-width: 1px;
 }
 
 .form-actions {
