--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -124,7 +124,9 @@ legend.collapse-processed a:visited {
   font-weight: bold;
 }
 
-#linkit-cancel {
+#linkit-cancel,
+#edit-cancel,
+.button {
   cursor: pointer;
   color: #555;
   font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
