More general button styling

--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -126,6 +126,7 @@ legend.collapse-processed a:visited {
 
 #linkit-cancel,
 #edit-cancel,
+a.button,
 .button {
   cursor: pointer;
   color: #555;
