--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -141,6 +141,7 @@ a.button,
   border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
   border-style: solid;
   border-width: 1px;
+  background: white;
 }
 #edit-delete{
   background: red;
