--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -688,6 +688,8 @@ legend.collapse-processed a:visited {
   font-weight: bold;
 }
 
+.form-actions > input,
+.form-actions > a,
 #linkit-cancel,
 #edit-delete,
 #edit-cancel,
@@ -699,7 +701,7 @@ a.button,
   font-weight: bold;
   margin: 0 4px;
   padding: 2px 4px;
-  text-transform: uppercase;
+  text-transform: capitlize;
   border: 0;
   border-radius: 4px;
   border-color: #d8d8d8 #d1d1d1 #bababa;
@@ -707,20 +709,35 @@ a.button,
   border-width: 1px;
   background: white;
 }
+.form-actions > input:hover,
+.form-actions > a:hover,
+#linkit-cancel:hover,
+#edit-delete:hover,
+#edit-cancel:hover,
+a.button:hover,
+.button:hover {
+  text-decoration: none;
+}
 
-#edit-delete {
+input[id*="delete"],
+input[class*="delete"] {
   background: red;
   color: #FFF;
 }
-#edit-delete:before {
+input[id*="delete"]:before,
+input[class*="delete"]:before {
   content: '\f2ed';
   display: inline;
   font-family: 'Font Awesome 5 Pro';
   margin-right: 0.5em;
 }
+input[id*="delete"]:hover,
+input[class*="delete"]:hover {
+  background: #fd5959;
+}
 
 #edit-cancel {
-  background: red;
+  background: #ffc200;
   color: #FFF;
 }
 #edit-cancel:before {
@@ -728,6 +745,16 @@ a.button,
   display: inline;
   font-family: 'Font Awesome 5 Pro';
   margin-right: 0.5em;
+}
+#edit-cancel:hover {
+  background: #f7c72f;
+}
+
+#edit-submit {
+  background: #439401;
+}
+#edit-submit:hover {
+  background: #a7ce37;
 }
 
 .form-actions {
