--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -570,7 +570,7 @@ form input.form-submit {
   font-weight: bold;
   margin: 0 4px;
   padding: 2px 4px;
-  text-transform: uppercase;
+  text-transform: capitalize;
   border: 0;
   border-radius: 4px;
 }
@@ -688,6 +688,7 @@ legend.collapse-processed a:visited {
   font-weight: bold;
 }
 
+input[type="submit"],
 .form-actions > input,
 .form-actions > a,
 #linkit-cancel,
@@ -701,14 +702,15 @@ a.button,
   font-weight: bold;
   margin: 0 4px;
   padding: 2px 4px;
-  text-transform: capitlize;
+  text-transform: capitalize;
   border: 0;
   border-radius: 4px;
   border-color: #d8d8d8 #d1d1d1 #bababa;
   border-style: solid;
   border-width: 1px;
-  background: white;
+  background: #286e9b;
 }
+input[type="submit"]:hover,
 .form-actions > input:hover,
 .form-actions > a:hover,
 #linkit-cancel:hover,
@@ -716,23 +718,27 @@ a.button,
 #edit-cancel:hover,
 a.button:hover,
 .button:hover {
+  background: #4186b5;
   text-decoration: none;
 }
 
 input[id*="delete"],
-input[class*="delete"] {
+input[class*="delete"],
+#edit-delete {
   background: red;
   color: #FFF;
 }
 input[id*="delete"]:before,
-input[class*="delete"]:before {
+input[class*="delete"]:before,
+#edit-delete:before {
   content: '\f2ed';
   display: inline;
   font-family: 'Font Awesome 5 Pro';
   margin-right: 0.5em;
 }
 input[id*="delete"]:hover,
-input[class*="delete"]:hover {
+input[class*="delete"]:hover,
+#edit-delete:hover {
   background: #fd5959;
 }
 
@@ -750,10 +756,12 @@ input[class*="delete"]:hover {
   background: #f7c72f;
 }
 
-#edit-submit {
+#edit-submit,
+.mbp-action-edit {
   background: #439401;
 }
-#edit-submit:hover {
+#edit-submit:hover,
+.mbp-action-edit:hover {
   background: #a7ce37;
 }
 
