--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -697,7 +697,7 @@ input[type="submit"],
 a.button,
 .button {
   cursor: pointer;
-  color: #555;
+  color: #fff;
   font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
   font-weight: bold;
   margin: 0 4px;
@@ -757,11 +757,11 @@ input[class*="delete"]:hover,
 }
 
 #edit-submit,
-.mbp-action-edit {
+input.mbp-action-edit {
   background: #439401;
 }
 #edit-submit:hover,
-.mbp-action-edit:hover {
+input.mbp-action-edit:hover {
   background: #a7ce37;
 }
 
@@ -1573,8 +1573,7 @@ ul.pager {
   border: 1px solid #ccc;
   border-radius: 6px;
   display: inline-block;
-  margin: auto;
-  margin-top: 1em;
+  margin: 0.5em auto;
   padding: 0;
 }
 ul.pager .pager__item {
