--- a/css/clients.css
+++ b/css/clients.css
@@ -64,4 +64,8 @@
   height: 100%;
   border: 0;
 }
+
+.node-type-client .field--name-field-audio-testimonial {
+  text-align: center;
+}
 /*# sourceMappingURL=clients.css.map */
