--- a/sass/pages/clients.scss
+++ b/sass/pages/clients.scss
@@ -13,6 +13,10 @@
 		.row:nth-child(2) {
 		    display: flex;
 		    flex-flow: row wrap;
+
+		    >.panel-panel {
+		    	flex: 1;
+		    }
 		}
 
 		.radix-layouts-column1 {
@@ -62,6 +66,9 @@
 		}
 	}
 
+	.field--name-field-image-testimonial {
+		text-align: center;
+	}
 	.field--name-field-audio-testimonial {
 		text-align: center;
 	}
