--- a/sass/pages/featured_clients.scss
+++ b/sass/pages/featured_clients.scss
@@ -7,12 +7,18 @@
 	.views-row {
 		display: flex;
 		flex-flow: column;
-	    flex: 1 1 250px;
-	    margin: 0.5em;
+		flex: 1 5 30%;
+		margin: 0.5em;
+		min-width: 250px;
 	}
 
 	.views-field-field-client-logo {
 		text-align: center;
+
+		img {
+			max-width: 100%;
+			height: auto;
+		}
 	}
 	.views-field-title-field {
 		border-bottom: 1px solid #d6dd89;
