--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -1,17 +1,3 @@
-form input.form-submit {
-  background-color: #286e9b; /* old browsers */
-  background-image: linear-gradient(top, #4186b5 0%, #286e9b 50%, #4186b5 100%); /* w3c */
-  color: #fff;
-  cursor: pointer;
-  font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  margin: 0 4px;
-  padding: 2px 4px;
-  text-transform: capitalize;
-  border: 0;
-  border-radius: 4px;
-}
-
 .g-recaptcha {
   display: table;
   margin: auto;
@@ -125,6 +111,7 @@ legend.collapse-processed a:visited {
 }
 
 input[type="submit"],
+input.form-submit,
 .form-actions>input, 
 .form-actions>a,
 #linkit-cancel,
