--- a/sass/pages/maintenance.scss
+++ b/sass/pages/maintenance.scss
@@ -48,13 +48,25 @@
     }
   }
   .l-content {
-    text-align: center;
     margin: 10%;
 
     h1 {
       border: 0;
       text-transform: capitalize;
       font-weight: bold;
+      margin-bottom: 1em;
+      text-align: center;
+    }
+
+    h2 {
+      text-align: center;
+    }
+
+    dt {
+      font-weight: bold;
+    }
+
+    dd {
       margin-bottom: 1em;
     }
   }
